Adapt to fewer threads
Run motor control in single thread.\n Removed motor.c and motor.h.\n Modify Threads. Modify Log for ThreadFlag.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,7 +3,8 @@
         "stdint.h": "c",
         "board.h": "c",
         "pwm.h": "c",
-        "lsm303agr.h": "c"
+        "lsm303agr.h": "c",
+        "ble_hci.h": "c"
     },
     "cmake.sourceDirectory": "/home/navin/Documents/RTES/Bluetooth-Microbit-v2/nRF5_SDK_17.1.0_ddde560/external/mbedtls"
 }
